--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -5,3 +5,7 @@ body {
     color: #484848;
     font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
+.container{
+    max-width: 1000px;
+    margin: 30px auto;
+}
