--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,4 +1,20 @@
 .places h1{
     font-size: 30px;
-    
+    text-align: left;
+    vertical-align: top;
+}
+.articles{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.articles article{
+    width: 390px;
+    margin: 20px;
+    padding: 20px;
+    border: 1px solid #FF5A5F;
+}
+.articles article h2{
+    font-size: 30px;
+    text-align: center;
 }
