--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -1,6 +1,6 @@
 /* 4-filters style */
 .filters{
-    color: white;
+    /* color: white; */
     height: 70px;
     width: 100%;
     border: 1px solid #DDDDDD;
@@ -32,12 +32,13 @@ section.filters .locations, section.filters .amenities{
 section.filters .locations{
     border-right: 1px solid #DDDDDD;
 }
-section.filters h3{
+h3{
     font-weight: 600px;
 }
-section.filters h4{
-    font-weight: 400;
+h4{
+    font-weight: 100;
     font-size: 14px;
+    margin-top: 0;
 }
 /* 6-filters style */
 .popover{
